<resources>
    <string name="app_name">Biblio</string>
    <string name="book">Book</string>
    <string name="Author">Author</string>
    <string name="categories">Categories</string>
    <string name="title">Title</string>
    <string name="day">Date</string>
    <string name="title_author">Author</string>
    <string name="categorie">Category</string>
    <string name="summary">Summary</string>
    <string name="lastname">Lastname</string>
    <string name="surname">Surname</string>
    <string name="titleBook">Title</string>
    <string name="date">Date</string>
    <string name="bdate">Birth date</string>
    <string name="firstname">Firstname</string>
    <string name="rellayExit">Press on more time to exit</string>
    <string name="BookSaved">This book as been added to the list.</string>
    <string name="CategorySaved">This category as been saved</string>
    <string name="AuthorSaved">This author as been saved</string>
    <string name="FillAll">All field must be filled</string>
    <string name="datePublication">Date of publication</string>
    <string name="UpdateSaved">This item as been updated</string>
    <string name="itemDeleted">This item as been deleted</string>
    <string name="french">French</string>
    <string name="german">German</string>
    <string name="english">English</string>
    <string name="italian">Italian</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="Bookmanager">Book Manager</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="search">Search</string>
    <string name="ok">"Ok"</string>
    <string name="aboutUs">This application was developped by Caroline and Vlado for the module 644-1 Mobile developpement and the topic is Book.
</string>
    <string name="Hello">Hello !</string>
    <string name="languageChanged">The language has been changed.</string>
    <string name="language">Language</string>
    <string name="bio">Biography</string>
    <string name="catORauthNull">You must have a category and an author to create a book.</string>
    <string name="DeleteCategory">Delete category</string>
    <string name="questionDeleteCategory">Do you want to delete this category</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="questionLongclickCategory">Do you want to delete or modify this category</string>
    <string name="modifyCategory">Modify</string>
</resources>
