<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/language">
        <menu>
            <item
                android:id="@+id/french"
                android:title="@string/french" />
            <item
                android:id="@+id/german"
                android:title="@string/german" />
            <item
                android:id="@+id/english"
                android:title="@string/english" />
            <item
                android:id="@+id/italian"
                android:title="@string/italian" />
        </menu>
    </item>
    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_info"
        android:title="@string/about"></item>


</menu>