<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context="com.caroline.vlado.biblio.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">



        <ImageButton
            android:id="@+id/buttonBook"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:contentDescription="@string/book"
            android:onClick="showBooks"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_open_book"
            tools:ignore="VectorDrawableCompat" />

        <ImageButton
            android:id="@+id/buttonAuthor"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:contentDescription="@string/Author"
            android:onClick="showAuthors"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_shakespeare"
            tools:ignore="VectorDrawableCompat" />

        <ImageButton
            android:id="@+id/buttonCategories"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:contentDescription="@string/categories"
            android:onClick="showCategories"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_three_folders"
            tools:ignore="VectorDrawableCompat" />
    </LinearLayout>


    <android.support.design.widget.NavigationView
        android:id="@+id/silder"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/settings" />


</android.support.v4.widget.DrawerLayout>
