<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.caroline.vlado.biblio.AddBookActivity">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_add_book_title"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="bottom"
            android:padding="10dp"
            android:text="@string/titleBook"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18dp" />


        <EditText
            android:id="@+id/et_add_book_title"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/tv_add_book_title"
            android:layout_toRightOf="@+id/tv_add_book_title" />

        <TextView
            android:id="@+id/tv_add_book_date"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_add_book_title"
            android:gravity="bottom"
            android:padding="10dp"
            android:text="@string/date"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/sp_add_course_date"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/tv_add_book_title"
            android:layout_toEndOf="@+id/tv_add_book_date"
            android:layout_toRightOf="@+id/tv_add_book_date"
            android:clickable="true"
            android:focusable="false"/>





        <TextView
            android:id="@+id/tv_add_book_author"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_add_book_date"
            android:gravity="bottom"
            android:padding="10dp"
            android:text="@string/title_author"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18dp" />

        <Spinner
            android:id="@+id/sp_add_book_author"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/tv_add_book_date"
            android:layout_toEndOf="@+id/tv_add_book_author"
            android:layout_toRightOf="@+id/tv_add_book_author"
            android:spinnerMode="dialog"
            android:textSize="18dp" />


        <TextView
            android:id="@+id/tv_add_book_categorie"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_add_book_author"
            android:gravity="bottom"
            android:padding="10dp"
            android:text="@string/categorie"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18dp" />

        <Spinner
            android:id="@+id/sp_add_book_categorie"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/tv_add_book_author"
            android:layout_toEndOf="@+id/tv_add_book_categorie"
            android:layout_toRightOf="@+id/tv_add_book_categorie"
            android:spinnerMode="dialog"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/tv_add_book_summary"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_add_book_categorie"
            android:gravity="bottom"
            android:padding="10dp"
            android:text="@string/summary"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18dp" />


        <EditText
            android:id="@+id/et_add_book_summary"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_add_book_summary"
            android:ems="30"
            android:gravity="left|top"
            android:inputType="textMultiLine" />



        <android.support.design.widget.FloatingActionButton
            android:id="@+id/addBookButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="28dp"
            android:layout_marginEnd="28dp"
            android:layout_marginStart="185dp"
            android:layout_marginTop="211dp"
            android:clickable="true"
            app:srcCompat="@drawable/ic_tick"
            tools:ignore="VectorDrawableCompat" />

    </RelativeLayout>

</LinearLayout>
