<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.caroline.vlado.biblio.showAuthorsActivity">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_add_author_lastname"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="bottom"
            android:padding="10dp"
            android:text="@string/lastname"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18dp" />


        <EditText
            android:id="@+id/et_add_author_lastname"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/tv_add_author_lastname"
            android:layout_toRightOf="@+id/tv_add_author_lastname" />

        <TextView
            android:id="@+id/tv_add_author_firstname"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_add_author_lastname"
            android:gravity="bottom"
            android:padding="10dp"
            android:text="@string/firstname"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/et_add_author_firstname"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/tv_add_author_lastname"
            android:layout_toEndOf="@+id/tv_add_author_firstname"
            android:layout_toRightOf="@+id/tv_add_author_firstname"
            android:spinnerMode="dialog" />





        <TextView
            android:id="@+id/tv_add_author_date"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_add_author_firstname"
            android:gravity="bottom"
            android:padding="10dp"
            android:text="@string/date"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/sp_add_author_date"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/tv_add_author_firstname"
            android:layout_toEndOf="@+id/tv_add_author_date"
            android:layout_toRightOf="@+id/tv_add_author_date"
            android:datePickerMode="calendar"
            android:textSize="18dp"
            android:clickable="true"
            android:focusable="false"/>


        <TextView
            android:id="@+id/tv_add_author_bio"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_add_author_date"
            android:gravity="bottom"
            android:padding="10dp"
            android:text="@string/bio"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/et_add_author_bio"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_add_author_bio"
            android:ems="30"
            android:gravity="left|top"
            android:inputType="textMultiLine" />


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/addAuthorButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="28dp"
            android:layout_marginEnd="28dp"
            android:layout_marginStart="185dp"
            android:layout_marginTop="211dp"
            android:clickable="true"
            app:srcCompat="@drawable/ic_tick"
            tools:ignore="VectorDrawableCompat" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/editAuthorButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="28dp"
            android:layout_marginEnd="28dp"
            android:layout_marginStart="185dp"
            android:layout_marginTop="211dp"
            android:clickable="true"
            app:srcCompat="@drawable/ic_edit"
            tools:ignore="VectorDrawableCompat" />

        <android.support.design.widget.FloatingActionButton
        android:id="@+id/deleteAuthorButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/addAuthorButton"
        android:layout_marginStart="16dp"
        android:clickable="true"
        app:srcCompat="@drawable/ic_delete"
        tools:ignore="VectorDrawableCompat" />



        <android.support.design.widget.FloatingActionButton
            android:id="@+id/seeBooks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/addAuthorButton"
            android:layout_marginStart="16dp"
            android:clickable="true"
            app:srcCompat="@drawable/ic_open_book"
            tools:ignore="VectorDrawableCompat" />


    </RelativeLayout>

</LinearLayout>
